--- a/css/all.css
+++ b/css/all.css
@@ -792,6 +792,9 @@ a{
 	margin-left: 3%;
 	margin-bottom: 30px;
 }
+.prod:hover {
+	transform: scale(1.05);
+}
 @media (max-width:767px){
 	.cart .container{
 		padding: 48px 11px 20px;
@@ -809,6 +812,20 @@ a{
 		margin-left: 5%;
 	}
 }
+@media (max-width:767px){
+	.funcbar{
+		justify-content: flex-end;
+		flex-wrap: wrap;
+	}
+	.searchbar{
+		width: 100%;
+		margin-bottom: 20px;
+		
+	}
+	.checkout{
+		margin-bottom: 20px;
+	}
+}
 @media (max-width:560px){
 	.cart .container{
 		flex-wrap: wrap;
@@ -823,8 +840,6 @@ a{
 		width: 100%;
 	}
 	.funcbar{
-		justify-content: flex-end;
-		flex-wrap: wrap;
 		padding-left: 0;
 	}
 	.searchbar{
